# book_writer_crew

./: pyproject.toml
src/book_writer_crew/: .env  __init__.py  agents.py  main.py  task.py
