[project]
name = "book-writer-crew"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "aamirshafiq14", email = "aamirshafiq1407@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
book-writer-crew = "book_writer_crew:main"
book = "book_writer_crew.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
